--- a/src/app/weather-info/weather-info.component.scss
+++ b/src/app/weather-info/weather-info.component.scss
@@ -9,6 +9,7 @@
 }
 
 .controls {
+  margin-top: 3px;
   flex-wrap: nowrap;
   display: flex;
   justify-content: space-between;
@@ -30,10 +31,6 @@ h1 {
       font-size: calc(3rem / 2.5 + 1vw);
     }
   }
-}
-
-.slider {
-  margin-top: 3px;
 }
 
 @media only screen and (orientation: portrait) {
@@ -70,12 +67,18 @@ h1 {
   }
 }
 
-@media only screen and (orientation: portrait) and (max-height: 650px) {
+@media only screen and (orientation: portrait) and (max-height: 640px) {
   .container {
     height: 80vh;
   }
+}
+
+@media only screen and (max-width: 420px) {
   h1 {
-    font-size: calc(3.2rem / 2.5 + 1vw);
+    font-size: calc(2.5rem / 2.5 + 1vw);
+    & .icon i {
+      font-size: calc(2.3rem / 2.5 + 1vw);
+    }
   }
 }
 
